# OOP_lab3

./: CMakeLists.txt  README  main.cpp  tests.cpp
include/: figure.h  figurearray.h  point.h  pointarray.h  pointpair.h  pointpairarray.h  rectangle.h  rhombus.h  trapezoid.h
source/: figure.cpp  figurearray.cpp  point.cpp  pointarray.cpp  pointpairarray.cpp  rectangle.cpp  rhombus.cpp  trapezoid.cpp
